[fix](ABC-1012): Kanban - Fix UI issues (#635)
* [fix](ABC-1012): Fix Summarize styling hooks

* [feat](ABC-1012): Set Due Date font-size to 0.75rem

* [fix](ABC-1012): Fix scrollbar visibility

* [fix](ABC-1012): Fix issue with summarize field not working if not specified in fields collection

* [fix](ABC-1012): Fix columns alignment in Path variant

* [fix](ABC-1012): Display due date in red if value is before Today

--- a/src/modules/base/kanban/kanbanSubGroups.css
+++ b/src/modules/base/kanban/kanbanSubGroups.css
@@ -112,26 +112,3 @@
     padding: 0;
     margin: 0;
 }
-
-.avonni-kanban__container_subgroups::-webkit-scrollbar,
-.avonni-kanban_expandable_container::-webkit-scrollbar {
-    width: 7px;
-    height: 7px;
-}
-
-.avonni-kanban__container_subgroups::-webkit-scrollbar-track,
-.avonni-kanban_expandable_container::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-.avonni-kanban__container_subgroups::-webkit-scrollbar-thumb,
-.avonni-kanban_expandable_container::-webkit-scrollbar-thumb {
-    background: #dbdbdb;
-    border-radius: 5px;
-}
-
-.avonni-kanban__container_subgroups::-webkit-scrollbar-thumb:hover,
-.avonni-kanban__tiles_container::-webkit-scrollbar-thumb:hover,
-.avonni-kanban_expandable_container::-webkit-scrollbar-thumb:hover {
-    background: #c0c0c0;
-}
